# Pave-Assignment

./: .env.example  .gitignore  DECISIONS.md  README.md  main.py  pyproject.toml  requirements.txt
docs/: TECH_SPEC.md  links.md  raw_data_exploration.md  raw_requirements.md
src/agent/: __init__.py  artifacts.py  executor.py  graph.py  hydration.py  param_resolver.py  reducer.py  state.py  supervisor.py
src/data/: comp_bands.py  employees.py  market_data.py
src/tools/: __init__.py  analysis_tools.py  band_tools.py  base.py  employee_tools.py  market_tools.py  meta_tools.py  scope.py
